iyzipay installment check

--- a/Views/Shared/_PartialProductCard.cshtml
+++ b/Views/Shared/_PartialProductCard.cshtml
@@ -68,7 +68,7 @@
                                     <input type="hidden" class="price" value="@actualPrice" />
                                     <input type="hidden" class="quantity" value="@item.MinOrder" />
                                     <span class="alert-text"></span>
-                                    <a class="add-cart add-to-cart" type="button" style="background-color:transparent">
+                                    <a class="add-cart add-to-cart" style="background-color:transparent">
                                         <span class="fa fa-cart-plus"></span>Sepete Ekle
                                     </a>
                             </div>
