--- a/Views/Shared/_PartialAydinlatmaMetni.cshtml
+++ b/Views/Shared/_PartialAydinlatmaMetni.cshtml
@@ -85,13 +85,9 @@
 
     <h3>İletişim</h3>
     <p>
-        Başvurularınızı veri sorumlusu olan <strong>Kayacan Kirpikli'ye</strong>'e aşağıdaki iletişim kanallarından
+        Başvurularınızı veri sorumlusu olan <strong>Veri Sorumlusuna</strong> aşağıdaki iletişim kanalından
         gerçekleştirebilirsiniz:
     </p>
     <p>
         E-posta: kayacan.kirpikli@birilerigt.com<br>
-        Telefon: +90 555 561 45 47
     </p>
-
-</body>
-</html>
