--- a/Views/Home/CheckOut.cshtml
+++ b/Views/Home/CheckOut.cshtml
@@ -3,7 +3,7 @@
     bool isCorporate = false;
 }
 @section Title {
-    <meta name="title" content="Hakkında">
+    <meta name="title" content="Kargo ve Fatura Bilgileri">
 }
 @section Description {
     <meta name="description" content="İthal ürünleri toptan ve perakende olarak satın alın. Katalog ürünleri, marka patent desteği ve e-ticaret çözümleri sunuyoruz.">
@@ -41,6 +41,7 @@
 
     </style>
 }
+
 @Html.AntiForgeryToken()
 <input name="__RequestVerificationToken" type="hidden" value="TOKEN_VALUE" />
 <!--CheckOut Page-->
@@ -224,74 +225,11 @@
             </ul>
         </div>
         <!--End Order Box-->
-        <!--Payment Box-->
-        <div class="payment-box">
-            <div class="upper-box">
 
-                <!--Payment Options-->
-                <div class="payment-options">
-                    <ul>
-                        <li>
-                            <div class="radio-option">
-                                <input type="radio" name="payment-group" id="payment-2" checked>
-                                <label for="payment-2"><strong>Banka Transferi</strong><span class="small-text" id="payment-2-text">Banka Havalesi ile ödeme yapın. Ödemenizin açıklamalar kısmına sipariş numaranızı eklemenizi önemle rica ederiz. Ödemeniz bankaya ulaştıktan sonra ürünleriniz kargoya hazırlanacaktır.</span></label>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="radio-option">
-                                <input type="radio" name="payment-group" id="payment-1">
-                                <label for="payment-1"><strong>Kredi Kartı</strong></label>
-                            </div>
-
-                            <!--Credit Card-->
-                            <div id="credit-card-info" class="credit-card-info" style="display: none;">
-                                <h3>Kredi Kartı Bilgileri</h3>
-                    
-                                <!-- Credit Card Fields  -->
-                                    <div class="form-group col-lg-6 col-md-6 col-sm-12" >
-                                        <div class="field-label">Kart Numarası:</div>
-                                        <input type="number" id="credit-card-number" class="no-arrow" style="width:300px;" placeholder="Kart Numarası" class="pl-1">
-                                    </div>
-                                    <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                        <div class="field-label">Son Kullanma Tarihi:</div>
-                                        <div class="exp-date-row">
-                                            <input type="number" id="expiry-date-month" style="max-width:30px; max-height:24px" class="pl-1 no-arrow" placeholder="AA">
-                                            <p class="ml-2 mr-2" style="justify-content:center;">/</p>
-                                            <input type="number" id="expiry-date-year" style="max-width:30px;max-height:24px" class="pl-1 no-arrow" placeholder="YY">
-                                        </div>
-                                    </div>
-                                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                        <div class="field-label">CVV:</div>
-                                        <input style="max-width:40px;" class="no-arrow" type="number" id="cvv" placeholder="CVV">
-                                    </div>
-                                <div id="installment-div" class="form-group col-lg-6 col-md-6 col-sm-12" style="display:none;">
-                                    <label for="installment">Taksit Seçeneği:</label>
-                                    <select id="installment" name="installment">
-                                        <option value="1">Tek Çekim</option>
-                                        <option value="2">2 Taksit</option>
-                                        <option value="3">3 Taksit</option>
-                                        <!-- Add more options as needed -->
-                                    </select>
-                                </div>
-
-                                <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                    <input type="checkbox" id="3d-payment" value="true">
-                                    <label for="3d-payment">3D Secure ile Öde</label>
-                                </div>
-                            </div>
-
-                        </li>
-
-                    </ul>
-                </div>
-            </div>
-            <div class="lower-box text-right">
-                <span class="alert-text"></span>
-                <a id="place-order" class="theme-btn order-btn">Sipariş Oluştur</a>
-            </div>
+        <div class="lower-box text-right">
+            <span class="alert-text">  </span>
+            <a id="proceed-to-payment" class="theme-btn order-btn">Ödeme Adımına Geç</a>
         </div>
-        <!--End Payment Box-->
-
     </div>
 </div>
 <!--End CheckOut Page-->
@@ -343,58 +281,8 @@
                     }
                 })
             });
-            $(document).on("change", "#payment-1", function () {
-                if (this.checked) {
-                    $("#credit-card-info").css("display","block");
-                    $("#payment-2-text").css("display","none");
-                } else {
-                    $("#is-corporate-div").style.display = 'none';
-                    $("#payment-2-text").css("display","block");
-                }
-            });
-            $(document).on("change", "#payment-2", function () {
-                if (this.checked) {
-                    $("#credit-card-info").css("display","none");
-                    $("#payment-2-text").css("display","block");
-                } else {
-                    $("#is-corporate-div").style.display = 'block';
-                    $("#payment-2-text").css("display","none");
-                }
-            });
-            $(document).on("input","#credit-card-number", function () {
-            const cardNumber = $(this).val().replace(/\s+/g, '');
-            if (cardNumber.length >= 6) {
-                const binNumber = cardNumber.substring(0, 6);
 
-
-                $.ajax({
-                    url: "/Home/CheckInstallment",
-                    type: "POST",
-                    contentType: "application/json",
-                    data: JSON.stringify({ binNumber: binNumber, price: 100 }),
-                    success: function (response) {
-                        if (response.installments && response.installments.length > 0) {
-                            
-                            $("#installment").empty();
-                            $.each(response.installments, function (i, item) {
-                                $("#installment").append(
-                                    `<option value="${item.installmentNumber}">${item.installmentNumber} Taksit</option>`
-                                );
-                            });
-                            $("#installment-div").show();
-                        } else {
-                            $("#installment-div").hide();
-                        }
-                    },
-                    error: function () {
-                        $("#installment-div").hide();
-                    }
-                });
-            } else {
-                $("#installment-div").hide();
-            }
-        });
-            $(document).on("click", "#place-order", function (e) {
+            $(document).on("click", "#proceed-to-payment", function (e) {
 
                 e.preventDefault();
                 var button = $(this);
@@ -411,16 +299,7 @@
                     requiredFields.push("billing-email", "billing-city", "billing-state", "billing-address-detailed", "billing-street")
 
                 }
-                var isCreditCardPayment = $("#payment-1").is(":checked");
-                if(isCreditCardPayment)
-                {
-                    requiredFields.push("credit-card-number", "expiry-date-month", "expiry-date-year", "cvv");
-                    var creditCardNumber = $("#credit-card-number").val();
-                    var expiryMonth = $("#expiry-date-month").val() ;
-                    var expiryYear = $("#expiry-date-year").val();
-                    var expiryDate = $("#expiry-date-month").val() + "/" + $("#expiry-date-year").val();
-                    var cvv = $("#cvv").val();
-                }
+                
                 let isValid = true;
 
                 // if fields are filled
@@ -438,29 +317,9 @@
                     showAlert(button,"Lütfen zorunlu alanları doldurun.","danger");
                     return;
                 }
-                // Check card payment
-                if(isCreditCardPayment)
-                {
-                    if (!isValidCardNumber(creditCardNumber)) {
-                        e.preventDefault();
-                        showAlert(button,"Geçersiz kart numarası.","danger");
-                        return;
-                    }
-
-                    if (!isValidExpiry(expiryMonth, expiryYear)) {
-                        e.preventDefault();
-                        showAlert(button,"Geçersiz son kullanma tarihi.","danger");
-                        return;
-                    }
-                    
-                    if (!isValidCVV(cvv)) {
-                        e.preventDefault();
-                        showAlert(button,"Geçersiz CVV.","danger");
-                        return;
-                    }
-                }
+               
                 // Disable button and show loading
-                $("#place-order").text("İşlem Yapılıyor...").prop("disabled", true);
+                $("#proceed-to-payment").text("İşlem Yapılıyor...").prop("disabled", true);
 
 
                 // Gather checkout data
@@ -534,76 +393,44 @@
                     };
                     orderItems.push(item);
                 });
-                 
-                var paymentMethod = $("input[name='payment-group']:checked").attr("id");
                 var notes = $("#other-notes").val();
                 var updateUserInfo = $("#update-user-info").is(":checked");
                 var data = {
                     ShipToAddress: shipToAddress,
                     BillingAddress: billingAddress,
                     OrderItems: orderItems,
-                    PaymentMethod: paymentMethod,
                     Notes: notes,
                     UpdateUserInfo: updateUserInfo
                 };
-                console.log(JSON.stringify(data));
+
                 // Send AJAX request
                 $.ajax({
-                    url: "/Home/PlaceOrder",
+                    url: "/Home/ProceedToPayment",
                     type: "POST",
                     contentType: "application/json",
                     dataType: "JSON",
                     async: true,
                     data: JSON.stringify(data),
                     
-                    //headers: { "RequestVerificationToken": getAntiForgeryToken() },
+                    headers: { "RequestVerificationToken": getAntiForgeryToken() },
                     success: function (response) {
-                        if (response.success) {
-                            showAlert(button,response.message,"success");
-                            window.location.href = "/Home"; // Redirect to confirmation page
-                        } else {
+                        if (response.success === false) {
                             showAlert(button, response.message, "error");
-                            $("#place-order").text("Sipariş Oluştur").prop("disabled", false);
+                            $("#proceed-to-payment").text("Ödeme Adımına Geç").prop("disabled", false);
                         }
-                    },
-                    error: function (response) {
-                        showAlert(button, response.message, "error");
-                        $("#place-order").text("Sipariş Oluştur").prop("disabled", false);
+                    },   
+                    error: function (xhr) {
+                        let message = "Bir hata oluştu.";
+                        if (xhr.responseJSON && xhr.responseJSON.message) {
+                            message = xhr.responseJSON.message;
+                        }
+                        showAlert(button, message, "error");
+                        $("#proceed-to-payment").text("Ödeme Adımına Geç").prop("disabled", false);
                     }
                 });
 
             });
         });
-                function isValidCardNumber(number) {
-            let sum = 0;
-            let shouldDouble = false;
-            for (let i = number.length - 1; i >= 0; i--) {
-                let digit = parseInt(number.charAt(i));
 
-                if (shouldDouble) {
-                    digit *= 2;
-                    if (digit > 9) digit -= 9;
-                }
-
-                sum += digit;
-                shouldDouble = !shouldDouble;
-            }
-            return sum % 10 === 0;
-        }
-                   function isValidExpiry(month, year) {
-            if (month < 1 || month > 12) return false;
-
-            const now = new Date();
-            const inputMonth = parseInt(month);
-            const inputYear = parseInt(`20${year.length === 2 ? year : year.slice(-2)}`);
-
-            const expiryDate = new Date(inputYear, inputMonth, 0);
-            if(expiryDate< now) return false;
-            return true;
-        }
-
-            function isValidCVV(cvv) {
-            return /^\d{3,4}$/.test(cvv);
-        }
     </script>
 }
