--- a/Views/Home/IWannaMakeALongDistanceCall.cshtml
+++ b/Views/Home/IWannaMakeALongDistanceCall.cshtml
@@ -54,6 +54,7 @@
         }
     </style>
  }
+
 <h2>Mesafeli Satış Sözleşmesi</h2>
 
 <div class="section">
@@ -62,7 +63,8 @@
         İşbu Mesafeli Satış Sözleşmesi’nin ("Sözleşme”) konusu, bir tarafta <strong>https://birilerigt.com/</strong> internet sitelerinden ürün/ürünler satın alan kişi ("ALICI”) ile diğer tarafta işbu internet sitesinden verilen siparişin tedarik ve tesliminden sorumlu
         <strong>"Bahariye Mah 1865 sok No 9 D1 Karşıyaka / İzmir "</strong> adresinde faaliyet gösteren
         <strong>1770705251</strong> vergi numaralı
-        <strong>Birileri Dış Ticaret Danışmanlık Sanayi ve Ticaret Limited Şirketi ("SATICI")</strong> arasındaki hak ve yükümlülüklerin 6502 sayılı Tüketicinin Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği uyarınca düzenlenmesinden ibarettir.
+        <strong>Birileri Dış Ticaret Danışmanlık Sanayi ve Ticaret Limited Şirketi ("SATICI")</strong> arasındaki hak ve yükümlülüklerin 6502 sayılı Tüketicinin Korunması Hakkında Kanun ve Mesafeli Sözleşmeler Yönetmeliği uyarınca düzenlenmesinden ibarettir.<br />
+        Bundan böyle ALICI ve SATICI her biri ayrı ayrı"Taraf”, birlikte"Taraflar”olarak anılacaktır.
     </p>
 </div>
 
@@ -73,7 +75,7 @@
         <strong>Adresi:</strong> Bahariye Mah 1865 sok No 9 D1 Karşıyaka / İzmir <br>
         <strong>Mersis No:</strong> 0177070525100001<br>
         <strong>Telefon:</strong> +90 555 561 45 47<br>
-        <strong>E-posta:</strong> info@unishop.com.tr
+        <strong>E-posta:</strong> info@birilerigt.com
     </p>
 </div>
 
@@ -127,50 +129,128 @@
 <div class="section">
     <h3>5. CAYMA HAKKI</h3>
     <p>
-        ALICI, teslim tarihinden itibaren 14 gün içinde hiçbir gerekçe göstermeksizin cayma hakkını kullanabilir. Cayma hakkının detayları ve iade süreci aşağıda yer almaktadır.
+        5.1.ALICI, mal satışına ilişkin işbu Sözleşme’de ürünün kendisine veya gösterdiği adresteki kişi/kuruluşa teslim tarihinden itibaren kanunen 14 (on dört) gün içerisinde hiçbir hukuki ve cezai sorumluluk üstlenmeksizin ve hiçbir gerekçe göstermeksizin malı reddederek sözleşmeden cayma hakkını kullanabilir. Cayma hakkının kullanılmasından kaynaklanan masraflar kanuni istisnalar hariç olmak üzere SATICI’ya aittir. <br />
+
+        5.2.Cayma hakkının kullanılması için 14 (on dört) günlük süre içinde, SATICI’ya iadeli taahhütlü posta veya e-posta ile SATICI’nın 2. maddede belirtilen ilgili adreslerine yazılı bildirimde bulunulması gerekmektedir. <br />
+
+        5.3.Cayma hakkının kullanılması halinde, <br />
+
+        a. ALICI dışındaki 3. kişilere veya ALICI’ya teslim edilen ürünün faturası,(iade edilmek istenen ürünün faturası tüzel kişi/tacir adına kesilmiş ise iade edilirken tüzel kişinin/tacirin düzenlemiş olduğu iade faturası ile birlikte gönderilmesi gerekmektedir. Faturası tüzel kişi/tacir adına düzenlenen sipariş iadeleri İADE FATURASI kesilmediği takdirde tamamlanamayacaktır.) <br />
+
+        b. İade formu (bkz. Ek-1); ALICI’nın cayma hakkını kullanabilmesi için ürünle birlikte kendisine iletilen iade formunu doldurması ve ürünü iade formuyla birlikte kargo/nakliyat şirketine teslim etmesi gerekmektedir. ALICI’nın iade formu dışında da cayma beyanında bulunma hakkı saklıdır. <br />
+
+        c. İade edilecek ürünlerin kutusu, ambalajı, varsa standart aksesuarları ile birlikte eksiksiz ve hasarsız olarak teslim edilmesi gerekmektedir. <br />
+
+        5.4.SATICI, cayma bildiriminin kendisine ulaşmasından itibaren en geç 14 (on dört) günlük süre içerisinde varsa malın ALICI’ya teslim masrafları dahil tahsil edilen toplam bedeli ALICI’ya iade etmekle yükümlüdür. SATICI, cayma bildiriminin kendisine ulaşmasından itibaren malı kendisinin geri alacağına dair bir teklifte bulunulmazsa, ALICI cayma hakkını kullandığına ilişkin bildirimi yönelttiği tarihten itibaren 10 (on) gün içinde malı SATICI’ya kendisine ilk teslimatı gerçekleştiren kargo/nakliyat şirketi vasıtasıyla geri göndermek zorundadır. <br />
+
+        5.5.ALICI’nın kusurundan kaynaklanan bir nedenle ürünün değerinde bir azalma olursa veya iade imkânsızlaşırsa ALICI kusuru oranında SATICI’nın zararlarını tazmin etmekle yükümlüdür. Ürünün zayii olduğu hallerde cayma hakkı kullanılamaz. <br />
+
+        5.6.Cayma hakkının kullanılması nedeniyle SATICI tarafından düzenlenen kampanya limit tutarının altına düşülmesi halinde kampanya kapsamında faydalanılan indirim miktarı iptal edilir. <br />
+
+        5.7.ALICI, Mesafeli Sözleşmeler Yönetmeliği’nin 15. maddesinin 1. fıkrası uyarınca cayma hakkını aşağıdaki hallerde kullanamayacağını kabul etmiştir: <br />
+
+        a)Fiyatı finansal piyasalardaki dalgalanmalara bağlı olarak değişen ve satıcı veya sağlayıcının kontrolünde olmayan mal veya hizmetler, <br />
+
+        b)Tüketicinin istekleri veya kişisel ihtiyaçları doğrultusunda hazırlanan mallar (5.7.i), <br />
+
+        c)Çabuk bozulabilen veya son kullanma tarihi geçebilecek mallar, <br />
+
+        ç)Tesliminden sonra ambalaj, bant, mühür, paket gibi koruyucu unsurları açılmış olan mallardan; iadesi sağlık ve hijyen açısından uygun olmayanlar, <br />
+
+        d)Tesliminden sonra başka ürünlerle karışan ve doğası gereği ayrıştırılması mümkün olmayan mallar, <br />
+
+        e)Malın tesliminden sonra ambalaj, bant, mühür, paket gibi koruyucu unsurları açılmış olması halinde maddi ortamda sunulan kitap, dijital içerik ve bilgisayar sarf malzemeleri, <br />
+
+        f)Abonelik sözleşmesi kapsamında sağlananlar dışında, gazete ve dergi gibi süreli yayınlar, <br />
+
+        g)Belirli bir tarihte veya dönemde yapılması gereken, konaklama, eşya taşıma, araba kiralama, yiyecek-içecek tedariki ve eğlence veya dinlenme amacıyla yapılan boş zamanın değerlendirilmesine ilişkin hizmetler, <br />
+
+        ğ)Elektronik ortamda anında ifa edilen hizmetler veya tüketiciye anında teslim edilen gayrimaddi mallar, <br />
+
+        h)Cayma hakkı süresi sona ermeden önce, tüketicinin onayı ile ifasına başlanan hizmetler. <br />
+
+        ı) Satıcı fiyat, indirim hatası oluşmuş ise veya teknik operasyonel bir hata gerçekleşmiş ise siparişi iptal etme hakkında sahiptir. <br />
+
+        i) Firmaya / Kişiye özel üretilen özel ölçülü ve/veya baskılı ürünlerin üretim sonrası iptali yapılamaz. Üretim hatası olmadıkça özel siparişler iade edilemez. <br />
+
+        5.8. Kargo bedava kampanyası ürün satışları için geçerlidir. Değişim veya herhangi bir sebepten kargonun ikinci kez gönderilmesi durumunda kargo ücreti ALICI'ya aittir. Ücretsiz kargo ilgili siparişin ilk gönderimi için geçerlidir. <br />
+
+        a) SATICI'nın hatalı veya eksik ürün gönderimi nedeniyle ikinci kez kargo yapması durumunda kargo ücretsiz olarak gönderilecektir. <br />
+
+        b) İade yada değişim için gönderilen ürünün hasar görmeden gönderilmesi ALICI'nın sorumluluğunda olduğundan özenli paketleme yapılması gerekmektedir.<br />
+
+        c) İade yada değişim için geri gönderilen ürünlerin kabul edilip yeniden gönderim veya ücret iadesi yapılabilmesi için ürünün yeniden satılabilirliğinin bozulmamış ve zarar görmemiş olması gerekmektedir.<br />
+
+        d) İade yada değişim için gönderilen ürünün hasar görmesi durumunda ALICI tazmin işlemlerini kargo firmasından gerçekleştirmelidir.<br />
+
+        e) İadenin kabul edilebilmesi için ürünün tamamının gönderilmesi gerekmektedir. Eksik adetli gönderilerde iade kabul edilememektedir.<br />
+
+        f) Birden fazla çeşitte ürün alınması durumunda iade edilecek olan ürünün tam adetli olarak gönderilmesi halinde kısmi iade yapılabilmektedir.<br />
+
+        g) Yeniden satılabilirliği bozulmuş, zarar görmüş ve/veya eksik adetli yapılan iade gönderileri depo tarafından teslim alınsa dahi kontroller sonrasında ALICI'ya iade edilecektir. Bu iade için ALICI'nın anlaşmalı kargosu var ise anlaşmalı kargosu ile karşı ödemeli, anlaşmalı kargosu yoksa yada bildirilmediyse SATICI'nın anlaşmalı kargosu ile karşı ödemeli olarak gönderilecektir.<br />
     </p>
-    <ul>
-        <li>Cayma hakkının kullanılması için SATICI’ya yazılı bildirim şarttır.</li>
-        <li>İade ürünler fatura, iade formu ve tüm aksesuarlarıyla birlikte eksiksiz gönderilmelidir.</li>
-        <li>İade süreci, cayma bildiriminin ulaşmasından itibaren 14 gün içinde tamamlanır.</li>
-        <li>İade edilen ürün zarar görmüşse ALICI zararı tazminle yükümlüdür.</li>
-        <li>Kargo kampanyaları yalnızca ilk gönderim için geçerlidir.</li>
-        <li>Yeniden satılamayacak ürünler iade edilemez.</li>
-    </ul>
 </div>
 
 <div class="section">
     <h3>6. TESLİMAT</h3>
     <p>
-        Ürünler 30 gün içinde ALICI'nın belirttiği adrese teslim edilir. Olağanüstü durumlarda ALICI bilgilendirilir. Teslimat sırasında ALICI’nın adreste bulunmaması durumunda, teslim yükümlülüğü yerine getirilmiş sayılır.
+        6.1.SATICI satış anında yürüttüğü ve internet sitesinde şartlarını ilan ettiği nakliye ücreti dahil kampanyaların sonucuna bağlı olarak, ürünleri göndermek üzere kullanacağı kargo ve/veya nakliye firmalarını kendisi belirlemekte ve ALICI’ya bu firmalarla gönderileri gerçekleştirmektedir. ALICI, SATICI’nın seçtiğinden farklı kargo firmasını tercih edebilir, ancak bu durumda oluşacak ilave gönderi bedeli nakten ve defaten SATICI’ya ödemek durumundadır.
+
+        6.2.Sipariş tüketicinin kendisinin seçtiği SATICI ile anlaşmalı kargo/nakliyat şirketi aracılığı ile, ALICI'nın yukarıda belirtilen adresinde elden teslim edilecektir. SATICI, siparişin kendisine ulaştığı tarihten itibaren 30 (otuz) gün çerisinde sipariş konusu ürünün sağlam, eksiksiz, siparişte belirtilen niteliklere uygun teslim edilmesinden sorumludur. Şüpheye mahal vermemek adına, Havale/EFT yolu ile gerçekleştirilen satışlarda siparişin SATICI’ya ulaştığı tarih, ödemenin yapıldığı tarih olarak esas alınacaktır.
+
+        6.3.SATICI sipariş edilen ürünleri tedarik edememesi halinde, bu durumu öğrendiği tarihten itibaren üç (3) gün içinde ALICI’yı bilgilendirerek sözlü/yazılı onayını almak kaydıyla, başka bir malı tedarik edebilir. ALICI’nın onay vermediği hallerde sipariş iptal edilir ve ödemeye ilişkin iade gerçekleştirilir.
+
+        6.4.Olağanüstü durumlar (hava muhalefeti, yoğun trafik, deprem, sel, sokağa çıkma kısıtlaması gibi) söz konusu ise SATICI, ürünün 30 (otuz) günlük yasal süre zarfında teslim edilememesi ile ilgili olarak ALICI ile irtibata geçerek haberdar eder. Bu durumda ALICI siparişi iptal edebilir, benzer bir ürün sipariş edebilir veya olağanüstü durum sona erene kadar bekleyebilir.
+
+        6.5.Ürünlerin teslimatı anında ALICI’nın adresinde bulunmaması veya adresteki kişilerin teslimatı kabul etmemesi durumunda SATICI, bu husustaki edimini yerine getirmiş kabul edilecektir. ALICI adreste teslim alacak bir kimsenin olmaması durumunda kargo/nakliyat firması ile irtibata geçip siparişin sevkiyatını takip etmek ve düzenlemek sorumluluğundadır.
+
+        6.6.ALICI, teslim almış olduğu ürünlere ilişkin ilgili kişinin açık rızasının alınması şartıyla, ilgili ürünlerin ev veya mekanlardaki fotoğraflarının çekilip, SATICI’nın belirleyeceği internet ortamında ve sosyal medya mecralarında paylaşımına izin verebilir.
+
+        6.7.SATICI fiyat ve indirim hatası oluşmuş ise veya teknik operasyonel bir hata gerçekleşmiş ise siparişi iptal etme hakkında sahiptir. Bu durumda teslimat gerçekleşmeden ücret iadesi yapmak satıcının sorumluluğundadır.
     </p>
 </div>
 
 <div class="section">
     <h3>7. GENEL HÜKÜMLER</h3>
     <p>
-        ALICI, ürünün niteliklerini ve satış koşullarını önceden okuyup anladığını kabul eder. Teslimat sonrası ödeme yapılmazsa SATICI ürünü teslim etmeme hakkına sahiptir.
+        7.1.Sözleşme konusu ürün, yasal 30 (otuz) günlük süreyi aşmamak koşulu ile ALICI veya gösterdiği adresteki kişi/kuruluşa, SATICI’nın anlaşmalı olduğu kargo firması tarafından teslim edilir.
+
+        7.2.ALICI, ürünleri teslim aldığı anda kontrol etmekle ve üründe üretimden veya kargodan kaynaklanan bir sorun gördüğünde, ürünü kabul etmemekle ve kargo firması yetkilisine tutanak tutturmakla sorumludur. Aksi halde SATICI sorumluluk kabul etmeyecektir.
+
+        7.3.ALICI, teslim almış olduğu üründe herhangi bir ayıba ilişkin tutanak tutturmadığı durumlarda malı her türlü ayıptan ari olarak almış olduğunu kabul eder. Üründe bulunan gizli ayıp hali ayrık olmak üzere sonradan ayıba ilişkin itirazda bulunamaz.
+
+        7.4.ALICI, SATICI tarafından aksi yazılı öngörülmemiş ise, ürünü teslim almadan önce bedelini tamamen ödemiş olması gerekir. Peşin satışlarda teslimattan önce ürün bedeli SATICI'ya tamamen ödenmediği, taksitli satışlarda vadesi gelen taksit tutarı tediye edilmediği takdirde, SATICI tek taraflı olarak sözleşmeyi iptal edebilir ve ürünü teslim etmeyebilir.
+
+        7.5.Ürün teslimatı sonrasında herhangi bir sebepten dolayı, işlem yapılan kredi kartının ait olduğu Banka/finansman kurumunun ürün bedelini SATICI'ya ödememesi halinde, ürün en geç 3 (üç) gün içinde ALICI tarafından tüm giderleri ALICI'ya ait olmak üzere SATICI'ya iade edilir. SATICI'nın iadeyi kabul etmeksizin ürün bedeli alacağını takip dâhil diğer tüm akdi-kanuni hakları ayrıca ve her halükârda saklıdır.
+
+        7.6.SATICI olağanüstü durumlar dışında haklı bir nedenle sözleşme konusu ürünlerin tedarik edilemeyeceğinin anlaşılması halinde ALICI’yı bilgilendirerek onayını almak sureti ile eşit kalite ve fiyatta başka bir malı tedarik edebilir ve Sözleşme konusu taahhüdünü bu suretle yerine getirmiş sayılır. ALICI’nın onay vermediği hallerde sipariş iptaline ilişkin hükümler uygulanır.
+
+        7.7.ALICI, SATICI tarafından sunulan ürün/ürünlere ilişkin temel nitelikleri, satış fiyatı, ödeme şekli, cayma hakkı, iade ve teslimatına ilişkin bilgileri dahil fakat bunlarla sınırlı olmamak üzere işbu Sözleşme’de yer alan her türlü bilgiyi okuduğunu, anladığını ve onayladığını kabul ve beyan eder.
     </p>
 </div>
 
 <div class="section">
     <h3>8. ŞİKAYETLER VE YETKİLİ MAHKEME</h3>
     <p>
-        ALICI, şikayetlerini SATICI'ya doğrudan iletebilir veya Tüketici Hakem Heyeti'ne başvurabilir. Uyuşmazlık halinde İzmir Mahkemeleri yetkilidir.
+        ALICI, şikâyet ve talepleri konusunda öncelikle 2. maddede yer alan adres ve iletişim kanallarından SATICI ile doğrudan irtibata geçebilir.
+
+        Ayrıca ALICI, söz konusu talep ve şikayetlerini, Gümrük ve Ticaret Bakanlığı tarafından her yıl Aralık ayında belirlenen parasal sınırlar dahilinde tüketicinin mal veya hizmeti satın aldığı veya ikametgahının bulunduğu yerdeki Tüketici Hakem Heyetlerine veya Tüketici Mahkemelerine yapabilir.
+
+        İşbu Sözleşme hükümleri dahilinde Taraflar arasında çıkabilecek her türlü uyuşmazlık veya ihtilaflar halinde İstanbul (Çağlayan) Mahkemeleri ve İcra Daireleri münhasıran yetkilidir.
     </p>
 </div>
 
 <div class="section">
     <h3>9. AYRILABİLİRLİK</h3>
     <p>
-        Sözleşmenin herhangi bir hükmü geçersiz olursa, kalan hükümler geçerli olmaya devam eder.
+        Sözleşme’nin herhangi bir hükmünün uygulanamaz olduğu tespit edilirse, Taraflar bu hükümleri benzeri fakat uygulanabilir bir hükümle değiştirecek, Sözleşme’nin varlığının bütünlüğü bozulmaksızın devam etmesini temin edecektir.
     </p>
 </div>
 
 <div class="section">
     <h3>10. YÜRÜRLÜK</h3>
     <p>
-        ALICI, sözleşmeyi okuyup kabul ettiğini beyan eder.
+        İşbu sözleşme "ALICI" tarafından gerek sipariş verilmeden önce internet sitesinde gerekse de sipariş verildikten sonra okunmuş içeriği tüm bilgiler ve koşullar kabul edilmiştir.
     </p>
 </div>
 
@@ -196,6 +276,7 @@
     <p>Not: İade formu yanında makbuz/fatura teslimi gereklidir.</p>
     <p class="signature"><strong>İmza:</strong> ________________________</p>
 </div>
+
 
 @section AdditionalScripts
 {
