--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -637,7 +637,7 @@
         
         function showAlert(button, message, type) {
             var alertText = button.prevAll(".alert-text").first(); // Find closest alert-text
-
+            console.warn(message);
             if (alertText.length === 0) {
                 console.warn("No alert-text found for this button.");
                 return;
