--- a/Views/Shared/_PartialCart.cshtml
+++ b/Views/Shared/_PartialCart.cshtml
@@ -105,7 +105,7 @@
                 <!--Totals Table-->
                 <ul class="totals-table">
                     <li class="clearfix total"><span class="col">Toplam</span><span class="col ">@Model.TotalAmount ₺</span></li>
-                    <li class="text-right"><a class="theme-btn proceed-btn" asp-controller="Home" asp-action="CheckOut" style="cursor:pointer;">ALIŞVERİRŞİ TAMAMLA</a></li>
+                    <li class="text-right"><a class="theme-btn proceed-btn" asp-controller="Home" asp-action="CheckOut" style="cursor:pointer;">SEPETİ ONAYLA</a></li>
                 </ul>
             </div>
 
