--- a/Views/Shared/_PartialOnBilgilendirmeFormu.cshtml
+++ b/Views/Shared/_PartialOnBilgilendirmeFormu.cshtml
@@ -38,7 +38,7 @@
     }
 </style> *@
 
-@model BirileriWebSitesi.Models.OrderAggregate.Order
+@model BirileriWebSitesi.Models.PaymentDTO
 <h2>ÖN BİLGİLENDİRME FORMU</h2>
 
 <div class="section">
@@ -85,7 +85,7 @@
         @foreach (var item in Model.OrderItems)
         {
 
-            var totalPrice = @item.UnitPrice * @item.Units;
+            var totalPrice = Convert.ToDouble(@item.UnitPrice * @item.Units) * 0.8;
             var tax = Convert.ToDouble(totalPrice) * 0.2;
             <tr>
                 <th>Ürün Adı</th>
