start 3d s in payment fix all others

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -33,7 +33,7 @@
                         <h3>Hsitory in Words</h3>
                         <p>We partner with over 320 amazing seds projects worldwide.There anyone who loves or desires to obtain pain of it is because seds all occasionally circumstances.</p>
                     </div>
-                    <a href="#" class="theme-btn btn-style-three">Read More</a>
+                    <a  class="theme-btn btn-style-three">Read More</a>
                 </div>
             </div>
 
