--- a/Views/Home/CheckOut.cshtml
+++ b/Views/Home/CheckOut.cshtml
@@ -213,7 +213,7 @@
 
         <div class="lower-box text-right">
             <span class="alert-text">  </span>
-            <a id="proceed-to-payment" class="theme-btn order-btn">Ödeme Adımına Geç</a>
+            <a id="proceed-to-payment" class="theme-btn order-btn">ÖDEME İŞLEMLERİ</a>
         </div>
     </div>
 </div>
@@ -379,7 +379,6 @@
                         Units: parseInt($(this).find(".quantity").text().trim())
                     };
 
-                        console.log(item.ProductName);
                     orderItems.push(item);
                 });
                 var notes = $("#other-notes").val();
