--- a/Views/Home/Payment.cshtml
+++ b/Views/Home/Payment.cshtml
@@ -1,4 +1,4 @@
-﻿@model BirileriWebSitesi.Models.PaymentDTO
+﻿@model BirileriWebSitesi.Models.PaymentViewModel
 
 
 @section Title {
@@ -78,13 +78,6 @@
             text-align: left;
         }
 
-        .dropdown-content {
-            display: none;
-            padding: 10px;
-            background: #fafafa;
-            border: 1px solid #ddd;
-        }
-
         .dropdown-checkbox {
             margin-right: 10px; 
             transform: scale(1.2); 
@@ -147,7 +140,19 @@
                                 <li>
                                     <div class="radio-option">
                                         <input type="radio" name="payment-group" id="payment-2" checked>
-                                        <label for="payment-2"><strong>Banka Transferi</strong><span class="small-text" id="payment-2-text">Banka Havalesi ile ödeme yapın. Ödemenizin açıklamalar kısmına sipariş numaranızı eklemenizi önemle rica ederiz. Ödemeniz bankaya ulaştıktan sonra ürünleriniz kargoya hazırlanacaktır.</span></label>
+                                        <label for="payment-2"><strong>Banka Transferi</strong>
+                                            <span class="small-text" id="payment-2-text">
+                                                Banka Havalesi ile ödeme yapın. Ödemenizin açıklamalar kısmına sipariş numaranızı eklemenizi önemle rica ederiz.
+                                                Ödemeniz bankaya ulaştıktan sonra ürünleriniz kargoya hazırlanacaktır.<br />
+
+                                                <span><strong>Banka Adı:</strong> T. Garanti Bankası A.Ş.</span><br />
+                                                <span><strong>Şube:</strong> KARŞIYAKA ÇARŞI </span><br />
+                                                <span><strong>Hesap No:</strong> 1596-6298952</span><br />
+                                                <span><strong>Alıcı:</strong> BİRİLERİ DIŞ TİCARET DANIŞMANLIK SANAYİ VE TİCARET LİMİTED Ş.</span><br />
+                                                <span><strong>IBAN:</strong> TR89 0006 2001 5960 0006 2989 52</span><br />
+
+                                            </span>
+                                        </label>
                                     </div>
                                 </li>
                                 <li>
@@ -161,6 +166,10 @@
                                         <h3>Kredi Kartı Bilgileri</h3>
 
                                         <!-- Credit Card Fields  -->
+                                        <div class="form-group col-lg-6 col-md-6 col-sm-12">
+                                            <div class="field-label">Kart Sahibi:</div>
+                                            <input type="text" id="card-holder-name" class="no-arrow pl-1" style="width:300px;" placeholder="Kart Sahibi">
+                                        </div>
                                         <div class="form-group col-lg-6 col-md-6 col-sm-12">
                                             <div class="field-label">Kart Numarası:</div>
                                             <input type="number" id="credit-card-number" class="no-arrow pl-1" style="width:300px;" placeholder="Kart Numarası">
@@ -188,7 +197,7 @@
                                         </div>
 
                                         <div class="form-group col-lg-6 col-md-6 col-sm-12">
-                                            <input type="checkbox" id="3d-payment" value="true">
+                                            <input type="checkbox" id="3d-payment" value="true" checked>
                                             <label for="3d-payment">3D Secure ile Öde</label>
                                         </div>
                                     </div>
@@ -211,26 +220,30 @@
                                 </div>
                             </div>
                         </div>
-                            <div class="dropdown-item">
+                        <div class="dropdown-item">
                         
-                                <input type="checkbox" checked class="dropdown-checkbox">
-                                <button class="dropdown-toggle">Mesafeli Satış Sözleşmesi</button>
-                                <div class="dropdown-content">
-                                    @Html.Partial("_PartialMesafeliSatisSozlesmesi", Model)
-                                </div>
+                            <input type="checkbox" checked class="dropdown-checkbox">
+                            <button class="dropdown-toggle">Mesafeli Satış Sözleşmesi</button>
+                            <div class="dropdown-content">
+                                @Html.Partial("_PartialMesafeliSatisSozlesmesi", Model)
                             </div>
-                            <div class="dropdown-item">
-                                <input type="checkbox" checked class="dropdown-checkbox">
-                                <button class="dropdown-toggle">KVKK Aydınlatma Metni</button>
-                                <div class="dropdown-content">
-                                    @Html.Partial("_PartialAydinlatmaMetni", Model)
-                                </div>
+                        </div>
+                        <div class="dropdown-item">
+                            <input type="checkbox" checked class="dropdown-checkbox">
+                            <button class="dropdown-toggle">KVKK Aydınlatma Metni</button>
+                            <div class="dropdown-content">
+                                @Html.Partial("_PartialAydinlatmaMetni", Model)
                             </div>
+                        </div>
+                        <div class="dropdown-item">
+                           <p>Ödemeyi Tamamla tuşuna basarak, Ön Bilgilendirme Formu, Mesafeli Satış Sözleşmesi ve KVKK Aydınlatma metnini okuyup onayladığınız kabul edilir.</p>
+                            <p>Ödenecek Toplam Tutar KDV Dahil <span id="info-p-total-amount"> @Model.TotalAmount.ToString("C2") </span></p>
+                        </div>
                     </div>
                         <!--End Legal Forms-->
                     <div class="lower-box text-right">
                         <span class="alert-text"></span>
-                        <a id="finish-payment" class="theme-btn order-btn">Ödemeyi Tamamla</a>
+                        <a id="finish-payment" class="theme-btn order-btn">ÖDEMEYİ TAMAMLA</a>
                     </div>
                 </div>
                 <!--End Payment Box-->
@@ -258,7 +271,7 @@
                             <li class="clearfix">ALT TOPLAM <span>@subTotal</span></li>
                         }
                         <li class="clearfix">KARGO ÜCRETİ<span class="free">ÜCRETSİZ</span></li>
-                        <li class="clearfix">TOPLAM<span>@Model.TotalAmount ₺</span></li>
+                        <li class="clearfix">TOPLAM<span id="final-price">@Model.TotalAmount ₺</span></li>
                     </ul>
                 </div>
 	            <!--End Cart Info Section-->
@@ -266,10 +279,12 @@
         </div>
     </div>
 </div>
+<input type="hidden" id="order-id" value="@Model.OrderId" />
+<input type="hidden" id="total-amount" value="@Model.TotalAmount" />
 @section AdditionalScripts {
     <script>
 	    $(document).ready(function () {
-
+            var force3ds = 0;
            $(".dropdown").removeClass("current");
            $(".cart").addClass("current");
             document.querySelectorAll('.dropdown-toggle').forEach(btn => {
@@ -291,51 +306,95 @@
                     if (this.checked) {
                         $("#credit-card-info").css("display","block");
                         $("#payment-2-text").css("display","none");
+                        $("#info-form-payment-type").text("Kredi Kartı");
+                        $("#agreement-form-payment-type").text("Kredi Kartı");
                     } else {
                         $("#is-corporate-div").style.display = 'none';
                         $("#payment-2-text").css("display","block");
+                        $("#info-form-payment-type").text("Banka Transferi");
+                        $("#agreement-form-payment-type").text("Banka Transferi");
                     }
             });
             $(document).on("change", "#payment-2", function () {
                 if (this.checked) {
                     $("#credit-card-info").css("display","none");
                     $("#payment-2-text").css("display","block");
+                        $("#info-form-payment-type").text("Banka Transferi");
+                        $("#agreement-form-payment-type").text("Banka Transferi");
                 } else {
                     $("#is-corporate-div").style.display = 'block';
                     $("#payment-2-text").css("display","none");
+                        $("#info-form-payment-type").text("Kredi Kartı");
+                        $("#agreement-form-payment-type").text("Kredi Kartı");
                 }
             });
             $(document).on("input","#credit-card-number", function () {
                 const cardNumber = $(this).val().replace(/\s+/g, '');
                 if (cardNumber.length >= 6) {
                     const binNumber = cardNumber.substring(0, 6);
-
+                    var price = parseFloat($("#total-amount").val());
                     $.ajax({
                         url: "/Home/CheckInstallment",
                         type: "POST",
                         contentType: "application/json",
-                        data: JSON.stringify({ binNumber: binNumber, price: 100 }),
+                        data: JSON.stringify({ binNumber: binNumber, price: price }),
                         success: function (response) {
-                            if (response.installments && response.installments.length > 0) {
+                            console.log(response.installments.force3Ds)
+                                if(response.installments.force3Ds === 1){
+                                    force3ds = 1;
+                                    $("#3d-payment").prop("checked", true);
+                                    $("#3d-payment").prop("disabled", true);
+                                }
+                                else{
 
+                                    force3ds = 0;
+                                    $("#3d-payment").prop("checked", false);
+                                    $("#3d-payment").prop("disabled",false);
+                                };                               
+
+                            if (response.installments && response.installments.installmentPrices.length > 0) {
+                                
                                 $("#installment").empty();
-                                $.each(response.installments, function (i, item) {
+                                $.each(response.installments.installmentPrices, function (i, item) {
+
                                     $("#installment").append(
-                                        `<option value="${item.installmentNumber}">${item.installmentNumber} Taksit</option>`
+                                        `<option value="${item.installmentNumber}"
+                                        data-price="${item.price}"
+                                        data-total-price="${item.totalPrice}">${item.installmentNumber} Taksit - Ayda ${item.price}₺ - Toplam ${item.totalPrice}₺</option>`
                                     );
                                 });
                                 $("#installment-div").show();
                             } else {
+
                                 $("#installment-div").hide();
                             }
                         },
                         error: function () {
+
                             $("#installment-div").hide();
                         }
                     });
                 } else {
                     $("#installment-div").hide();
                 }
+            });
+
+            $(document).on("change","#installment", function() {
+                var selectedOption = $(this).find("option:selected");
+                var installmentNumber = selectedOption.val();
+                var installmentPrice = selectedOption.data("price");
+                var totalPrice = selectedOption.data("total-price");
+
+                $("#installment").val(installmentNumber);
+                $("#installment").attr("data-price", installmentPrice);
+                $("#installment").attr("data-total-price", totalPrice);
+                $("#agreement-form-installment-amount").text(installmentNumber);
+                $("#agreement-form-total-amount").text(totalPrice);
+                $("#info-form-installment-amount").text(installmentNumber);
+                $("#info-form-total-amount").text(totalPrice);
+                $("#total-amount").val(totalPrice);
+                $("#info-p-total-amount").text(totalPrice);
+                $("#final-price").text(totalPrice);
             });
             $(document).on("click", "#finish-payment", function (e) {
 
@@ -344,9 +403,12 @@
                     let requiredFields = [];
                 
                     var isCreditCardPayment = $("#payment-1").is(":checked");
+                    var force3Ds = $("#3d-payment").is(":checked");
                     if(isCreditCardPayment)
                     {
-                        requiredFields.push("credit-card-number", "expiry-date-month", "expiry-date-year", "cvv");
+                        requiredFields.push("credit-card-number", "expiry-date-month", "expiry-date-year", "cvv", "card-holder-name");
+                        var cardHolderName = $("#card-holder-name").val();
+                        var creditCardNumber = $("#credit-card-number").val();
                         var creditCardNumber = $("#credit-card-number").val();
                         var expiryMonth = $("#expiry-date-month").val() ;
                         var expiryYear = $("#expiry-date-year").val();
@@ -369,6 +431,7 @@
                         showAlert(button,"Lütfen zorunlu alanları doldurun.","danger");
                         return;
                     }
+
                     // Check card payment
                     if(isCreditCardPayment)
                     {
@@ -390,18 +453,45 @@
                             return;
                         }
                     }
+
+                    // Check forms are checked
+                    $(".dropdown-checkbox").each(function () {
+                        if (!$(this).is(":checked")) {
+                            isValid = false;
+                            $(this).css("border", "1px solid red");
+                        } else {
+                            $(this).css("border", "none");
+                        }
+                    });
+
+                    if (!isValid) {
+                        e.preventDefault();
+                        showAlert(button, "Lütfen tüm formları okuyup onaylayınız.", "danger");
+                        return;
+                    }
+
                     // Disable button and show loading
                     $("#finish-payment").text("İşlem Yapılıyor...").prop("disabled", true);
 
 
                     var paymentMethod = $("input[name='payment-group']:checked").attr("id");
-               
+                    var orderId = parseInt($("order-id").val());
+                    var installmentAmount = parseInt($("#installment").val());
                     var data = {
-                        PaymentMethod: paymentMethod,
+                        orderId : orderId,
+                        InstallmentAmount: installmentAmount,
+                        PaymentType: paymentMethod,
+                        CardHolderName : cardHolderName,
 					    CreditCardNumber: creditCardNumber,
-					    ExpiryDateMonth: expiryMonth,
-					    ExpiryDateYear: expiryYear,
+                        ExpMonth: expiryMonth,
+                        ExpYear: expiryYear,
 					    CVV: cvv,
+                        RegistrationDate: new Date(),
+                        LastLoginDate: new Date(),
+                        Ip: "",
+                        City: "",
+                        Country: "",
+                        Force3Ds:force3Ds,
                     };
                     console.log(JSON.stringify(data));
                     // Send AJAX request
