--- a/Views/Shared/_PartialAydinlatmaMetni.cshtml
+++ b/Views/Shared/_PartialAydinlatmaMetni.cshtml
@@ -29,6 +29,7 @@
 </head> *@
 
 
+<div class="section">
     <h2>Kişisel Verilerin Korunması Aydınlatma Metni</h2>
     <p>
         Sayın Müşterilerimiz, Potansiyel Müşterilerimiz ve Web Sitesi Ziyaretçilerimiz,<br>
@@ -36,7 +37,8 @@
         Bu kapsamda 6698 sayılı Kişisel Verilerin Korunması Kanunu ("KVKK”) uyarınca "veri sorumlusu” sıfatıyla
         kişisel verileriniz ve işleme süreçleri hakkında sizleri bilgilendirmek isteriz.
     </p>
-
+</div>
+<div class="section">
     <h3>İşlenen Kişisel Verileriniz Nelerdir</h3>
     <ul>
         <li>Kimlik bilgileriniz (Ad Soyad, Doğum tarihi, TC Kimlik No)</li>
@@ -46,7 +48,8 @@
         <li>Şirket bilgileri (Ad, telefon, adres)</li>
         <li>Fatura bilgileri, banka bilgileri, ödeme yöntemi vb.</li>
     </ul>
-
+</div>
+<div class="section">
     <h3>Kişisel Verilerinizin İşlenme Amaçları</h3>
     <ul>
         <li>Hizmet sunumu, sipariş süreçleri ve fatura işlemleri</li>
@@ -55,20 +58,26 @@
         <li>Yasal yükümlülüklerin yerine getirilmesi</li>
         <li>İstatistiksel analiz, pazarlama faaliyetleri</li>
     </ul>
+</div>
 
+<div class="section">
     <h3>Kişisel Verilerinizin Toplanma Yöntemi ve Hukuki Sebebi</h3>
     <p>
         Kişisel verileriniz; web sitemiz üzerinden, alışverişleriniz, iletişim formları, üyelik işlemleri ve
         çerezler vasıtasıyla, otomatik veya manuel yöntemlerle toplanmakta olup; KVKK’nın 5. ve 6. maddelerinde belirtilen
         hukuki sebepler doğrultusunda işlenmektedir.
     </p>
+</div>
 
+<div class="section">
     <h3>Kişisel Verilerinizin Aktarılması</h3>
     <p>
         Kişisel verileriniz; yurt içi ve yurt dışı hizmet sağlayıcılarla, iş ortaklarımızla, kamu kurum ve kuruluşları ile
         paylaşılabilmektedir. Ödeme bilgileriniz, ödeme kuruluşlarına aktarılmakta olup Şirket tarafından kaydedilmemektedir.
     </p>
+</div>
 
+<div class="section">
     <h3>Haklarınız</h3>
     <p>KVKK'nın 11. maddesi uyarınca aşağıdaki haklara sahipsiniz:</p>
     <ul>
@@ -82,12 +91,15 @@
         <li>Otomatik sistemlerle analiz edilmesi suretiyle aleyhinize bir sonucun ortaya çıkmasına itiraz etme</li>
         <li>Kanuna aykırı işlenmesi sebebiyle zararın giderilmesini talep etme</li>
     </ul>
+</div>
 
+<div class="section">
     <h3>İletişim</h3>
     <p>
         Başvurularınızı veri sorumlusu olan <strong>Veri Sorumlusuna</strong> aşağıdaki iletişim kanalından
         gerçekleştirebilirsiniz:
     </p>
     <p>
-        E-posta: kayacan.kirpikli@birilerigt.com<br>
+        E-posta: info@birilerigt.com<br>
     </p>
+</div>
